--- a/_static/EFD_Focus_Full_20Dec21.html
+++ b/_static/EFD_Focus_Full_20Dec21.html
@@ -15030,7 +15030,7 @@ Cosine fit, Ext: ChiSquared =     1.5503835688477101
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>This plot shows the improvement due to the temperature compensation.  The left hand plot is without including temperature. The right hand plot is the best fit model, with the temperature compensation included.  You can see that the scatter is signifcantly reduced.</p>
+<p>This plot shows the improvement due to the temperature compensation.  The left hand plot is without including temperature. The right hand plot is the best fit model, with the temperature compensation included.  You can see that the scatter is significantly reduced.</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
